--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     volumes:
     - db_data:/var/lib/postgresql/data
   graphql-engine:
-    image: hasura/graphql-engine:v1.0.0-beta.3
+    image: hasura/graphql-engine:v1.0.0-beta.4
     # ports:
     # - "8080:8080"
     depends_on:
@@ -16,8 +16,8 @@ services:
       HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:@postgres:5432/postgres
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
       ## uncomment next line to set an admin secret
-      #HASURA_GRAPHQL_ADMIN_SECRET: flutterando
-      #HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS256", "key": "vdf0r8yt982erg8rt944rc23xfdfw34re23f23"}'
+      HASURA_GRAPHQL_ADMIN_SECRET: flutterando
+      HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS256", "key": "vdf0r8yt982erg8rt944rc23xfdfw34re23f23"}'
   auth-server:
     build: auth/.
     # ports:
@@ -42,8 +42,8 @@ services:
     - "auth-server"
     - "graphql-engine"
     ports:
-      - 80:80
-      - 443:443
+      - 9090:80
+      # - 443:443
   
 volumes:
   db_data:
