--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,17 @@
-version: '3.6'
+version: '3.2'
 services:
   postgres:
     image: postgres
     restart: always
+    deploy: 
     volumes:
-    - db_data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
   graphql-engine:
     image: hasura/graphql-engine:v1.0.0-beta.4
-    # ports:
-    # - "8080:8080"
-    depends_on:
-    - "postgres"
     restart: always
+    deploy: 
+    depends_on:
+      - "postgres"
     environment:
       HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:@postgres:5432/postgres
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
@@ -19,11 +19,13 @@ services:
       HASURA_GRAPHQL_ADMIN_SECRET: flutterando
       HASURA_GRAPHQL_JWT_SECRET: '{"type":"HS256", "key": "vdf0r8yt982erg8rt944rc23xfdfw34re23f23"}'
   auth-server:
-    build: auth/.
+    image: golang:1.12.7-buster
+    restart: always
+    deploy: 
     # ports:
     #   - "8081:8081"
     volumes:
-      - "auth/.:/auth/"
+      - "./auth:/auth"
     depends_on:
       - "postgres"
     environment:
@@ -33,18 +35,20 @@ services:
       POSTGRES_HOST: postgres
       POSTGRES_PASSWORD:
       SIGNINGKEY: vdf0r8yt982erg8rt944rc23xfdfw34re23f23
+    working_dir: /auth
+    command: sh -c "cd /auth && go install && echo '----------------' && go run main.go"
   proxy:
     image: nginx:1.13
     restart: always
+    deploy: 
     volumes:
       - ./proxy/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-    - "auth-server"
-    - "graphql-engine"
+      - "auth-server"
+      - "graphql-engine"
     ports:
       - 9090:80
-      # - 443:443
+      - 9091:443
   
 volumes:
   db_data:
-  auth:
