add support for ws http2 and params request

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,22 +1,35 @@
 server {
     listen 80;
-    server_name localhost;
+    listen [::]:80;
 
     location / {
-      root /usr/share/nginx/html;
-      index index.html index.htm;
+     root /usr/share/nginx/html;
+     index index.html index.htm;
     }
 
-    error_page 500 502 503 504 /50x.html;
+    #error_page 500 502 503 504 /50x.html;
 
     location /hasura/ {
       proxy_pass http://graphql-engine:8080/;
+      proxy_set_header HOST $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_pass_request_headers on;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+      rewrite ^/auth(.*)$ $1 break;
     }
 
-    location /auth {
+    location /auth/ {
       proxy_pass http://auth-server:8081;
+      proxy_set_header HOST $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_pass_request_headers on;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
       rewrite ^/auth(.*)$ $1 break;
     }
 }
-
-  
